Refactored DriverListener to implement WebDriverListener instead of WebDriverEventListener