@@ -16,6 +16,7 @@
 package com.qaprosoft.carina.core.foundation.webdriver.core.factory;
 
 import java.lang.invoke.MethodHandles;
+import java.lang.reflect.InvocationTargetException;
 import java.net.URL;
 import java.util.ArrayList;
 import java.util.List;
@@ -23,7 +24,8 @@ import java.util.List;
 import org.apache.commons.lang3.StringUtils;
 import org.openqa.selenium.MutableCapabilities;
 import org.openqa.selenium.WebDriver;
-import org.openqa.selenium.support.events.WebDriverEventListener;
+import org.openqa.selenium.support.events.EventFiringDecorator;
+import org.openqa.selenium.support.events.WebDriverListener;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
@@ -82,44 +84,47 @@ public class DriverFactory {
 			throw new RuntimeException("Unsupported driver_type: " + driverType);
 		}
 
-		LOGGER.info("Starting driver session...");
-		WebDriver driver = factory.create(testName, capabilities, seleniumHost);
-        driver = factory.registerListeners(driver, getEventListeners());
+        LOGGER.info("Starting driver session...");
+        WebDriver driver = factory.create(testName, capabilities, seleniumHost);
+        driver = new EventFiringDecorator<>(getEventListeners(driver)).decorate(driver);
         LOGGER.info("Driver session started.");
-		LOGGER.debug("DriverFactory finish...");
+        LOGGER.debug("DriverFactory finish...");
 
-		return driver;
-	}
-	
-	   /**
-     * Reads 'driver_event_listeners' configuration property and initializes
-     * appropriate array of driver event listeners.
-     * 
-     * @return array of driver listeners
+        return driver;
+    }
+
+    /**
+     * Reads 'driver_event_listeners' configuration property and initializes appropriate array of driver event listeners.
+     *
+     * @return list of driver listeners (default listener plus custom listeners)
      */
-    private static WebDriverEventListener[] getEventListeners() {
-        List<WebDriverEventListener> listeners = new ArrayList<>();
-        try {
-            //explicitly add default carina com.qaprosoft.carina.core.foundation.webdriver.listener.DriverListener
-            DriverListener driverListener = new DriverListener();
-            listeners.add(driverListener);
+    private static WebDriverListener[] getEventListeners(WebDriver driver) {
+        List<WebDriverListener> listeners = new ArrayList<>();
 
-            String listenerClasses = Configuration.get(Parameter.DRIVER_EVENT_LISTENERS);
-            if (!StringUtils.isEmpty(listenerClasses)) {
-                for (String listenerClass : listenerClasses.split(",")) {
+        // explicitly add default carina com.qaprosoft.carina.core.foundation.webdriver.listener.DriverListener
+        DriverListener driverListener = new DriverListener(driver);
+        listeners.add(driverListener);
+
+        String listenerClasses = Configuration.get(Parameter.DRIVER_EVENT_LISTENERS);
+
+        if (!StringUtils.isEmpty(listenerClasses)) {
+            for (String listenerClass : listenerClasses.split(",")) {
+                try {
                     Class<?> clazz = Class.forName(listenerClass);
-                    if (WebDriverEventListener.class.isAssignableFrom(clazz)) {
-                        WebDriverEventListener listener = (WebDriverEventListener) clazz.newInstance();
+                    if (WebDriverListener.class.isAssignableFrom(clazz)) {
+                        WebDriverListener listener = (WebDriverListener) clazz.getDeclaredConstructor().newInstance();
                         listeners.add(listener);
                         LOGGER.debug("Webdriver event listener registered: {}", clazz.getName());
                     }
+                } catch (ClassNotFoundException e) {
+                    LOGGER.error("Unable to register '{}' webdriver event listener! Class was not found", listenerClass, e);
+
+                } catch (InvocationTargetException | InstantiationException | IllegalAccessException | NoSuchMethodException e) {
+                    LOGGER.error("Unable to register '{}' webdriver event listener! Please, investigate stacktrace!", listenerClass, e);
                 }
             }
-            
-        } catch (Exception e) {
-            LOGGER.error("Unable to register webdriver event listeners!", e);
         }
-        return listeners.toArray(new WebDriverEventListener[listeners.size()]);
+        return listeners.toArray(new WebDriverListener[0]);
     }
 
 }
